k8s/manifests/infrastructure/kafka-mysql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-mysql
  template:
    metadata:
      labels:
        app: keycloak-mysql
    spec:
      containers:
        - name: keycloak-mysql
          image: mysql:8
          ports:
            - containerPort: 3307
          volumeMounts:
            - name: keycloak-mysql-data
              mountPath: /var/lib/mysql
      volumes:
        - name: keycloak-mysql-data
          persistentVolumeClaim:
            claimName: keycloak-mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-mysql
spec:
  selector:
    app: keycloak-mysql
  ports:
    - protocol: TCP
      port: 3307
      targetPort: 3307
